# raw-wav-simple-speaker-recognition

./: .gitignore  .project-root  README.md  calc_mean_xvector.py  calc_mid_xvector.py  compare_xvec.py  compute_mfcc.py  eval.py  eval_result.txt  gen_stacked_all_synth_xvec.py  gen_stacked_synth_xvec.py  gen_stacked_xvector_matrix.py  inference.py  make_dataset.py  marge_actor_list_v1.csv  my_dataset.py  pyproject.toml  reconstruction.py  simpleSR.py  train.py
conf/simpleSR/: config.yaml  extra_stacked_all_config.yaml  mid_gen_config.yaml  reconstruction.yaml
conf/simpleSR/base_model/: x_vector.yaml
conf/simpleSR/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml
conf/simpleSR/criterion/: CrossEntropyLoss.yaml  default.yaml
conf/simpleSR/data/: default.yaml
conf/simpleSR/logger/: wandb.yaml
conf/simpleSR/model/: simpleSR.yaml  x_vector_lightning.yaml
conf/simpleSR/optimizer/: adamw.yaml
hansyo_ssr/: compute_mean_std.py  eval.py  make_dataset.py  train.py
hansyo_ssr/data/: datamodule.py  dataset.py  my_dataset.py
hansyo_ssr/model/: __init__.py  simpleSR.py  x_vector.py  x_vector_lightning.py  x_vector_lightning_single.py
script/: create_data.sh  marge_data.sh
